wavparse: error out if we receive eos before any valid data

https://bugzilla.gnome.org/show_bug.cgi?id=696684